kiali/kiali-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
spec:
  host: kiali
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
