kiali/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  gateways:
    - bookinfo-gateway
  hosts:
  - '*'
  http:
    - match:
      - uri:
          exact: /kiali
      route:
      - destination:
          host: kiali
          port:
            number: 20001
